rendered/envs/alpha/authelia/middleware-chain-authelia.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authelia
    app.kubernetes.io/version: 4.38.15
    helm.sh/chart: authelia-0.9.8
  name: chain-authelia
spec:
  chain:
    middlewares:
      - name: headers-authelia
        namespace: authelia
