rendered/envs/alpha/authelia/middleware-forwardauth-authelia.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authelia
    app.kubernetes.io/version: 4.38.16
    helm.sh/chart: authelia-0.9.15
  name: forwardauth-authelia
spec:
  forwardAuth:
    address: http://authelia.authelia.svc.cluster.local/api/authz/forward-auth
    authResponseHeaders:
      - Remote-User
      - Remote-Name
      - Remote-Email
      - Remote-Groups
    trustForwardHeader: true
