rendered/envs/alpha/authelia/deployment-authelia.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
  name: authelia
  namespace: authelia
spec:
  minReadySeconds: 0
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/instance: authelia
      app.kubernetes.io/name: authelia
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        authelia.com/checksum-config: 318216abb3ed3fbcbf15542c3c82c2ace70545eab55bee365d6c65b56bed028d
      labels:
        app.kubernetes.io/instance: authelia
        app.kubernetes.io/name: authelia
    spec:
      affinity:
        nodeAffinity: {}
        podAffinity: {}
        podAntiAffinity: {}
      containers:
        - command:
            - authelia
          image: oci.zebradil.dev/ghcr.io-cache/authelia/authelia@sha256:8f428b06bb07bb978c10477527634f19ef3b049c9c87321fda14e24d8fc4c535
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: authelia
          ports:
            - containerPort: 9091
              name: http
              protocol: TCP
            - containerPort: 9959
              name: metrics
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits: {}
            requests: {}
          startupProbe:
            failureThreshold: 6
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /config
              name: authelia
              readOnly: false
            - mountPath: /configuration.yaml
              name: config
              readOnly: true
              subPath: configuration.yaml
            - mountPath: /secrets/internal
              name: secrets
              readOnly: true
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      volumes:
        - name: authelia
          persistentVolumeClaim:
            claimName: authelia
        - configMap:
            items:
              - key: configuration.yaml
                path: configuration.yaml
            name: authelia
          name: config
        - name: secrets
          secret:
            items:
              - key: identity_validation.reset_password.jwt.hmac.key
                path: identity_validation.reset_password.jwt.hmac.key
              - key: session.encryption.key
                path: session.encryption.key
              - key: notifier.smtp.password.txt
                path: notifier.smtp.password.txt
              - key: storage.encryption.key
                path: storage.encryption.key
              - key: identity_providers.oidc.hmac.key
                path: identity_providers.oidc.hmac.key
              - key: oidc.jwks.default.key
                path: oidc.jwks.default.key
            secretName: authelia
