rendered/envs/alpha/authelia/statefulset-authelia.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    a8r.io/repository: git@github.com:Zebradil/myks-homelab.git
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authelia
    app.kubernetes.io/version: 4.37.5
    helm.sh/chart: authelia-0.8.58
  name: authelia
spec:
  podManagementPolicy: Parallel
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/instance: authelia
      app.kubernetes.io/name: authelia
  serviceName: authelia
  template:
    metadata:
      annotations:
        checksum/config: d715848a4c9d526ce7b0a4c3aaad13478acbaaeb5f73c50648845d397d39e320
      labels:
        app.kubernetes.io/instance: authelia
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: authelia
        app.kubernetes.io/version: 4.37.5
        helm.sh/chart: authelia-0.8.58
    spec:
      affinity:
        nodeAffinity: {}
        podAffinity: {}
        podAntiAffinity: {}
      containers:
        - args:
            - --config=/configuration.yaml
          command:
            - authelia
          image: ghcr.io/authelia/authelia:4.37.5
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: authelia
          ports:
            - containerPort: 9091
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits: {}
            requests: {}
          startupProbe:
            failureThreshold: 6
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /configuration.yaml
              name: config
              readOnly: true
              subPath: configuration.yaml
            - mountPath: /secrets
              name: secrets
              readOnly: true
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      volumes:
        - configMap:
            items:
              - key: configuration.yaml
                path: configuration.yaml
            name: authelia
          name: config
        - name: secrets
          secret:
            items:
              - key: JWT_TOKEN
                path: JWT_TOKEN
              - key: SESSION_ENCRYPTION_KEY
                path: SESSION_ENCRYPTION_KEY
              - key: STORAGE_ENCRYPTION_KEY
                path: STORAGE_ENCRYPTION_KEY
            secretName: authelia
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
