rendered/envs/alpha/authelia/ingress-authelia.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
    traefik.ingress.kubernetes.io/router.middlewares: authelia-chain-authelia@kubernetescrd
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
  name: authelia
  namespace: authelia
spec:
  rules:
    - host: auth.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: authelia
                port:
                  number: 80
            path: /
            pathType: Prefix
