rendered/envs/alpha/authelia/ingressroute-authelia-catch-all.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: authelia-catch-all
spec:
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      middlewares:
        - name: chain-authelia-auth
          namespace: authelia
      priority: 1
      services:
        - name: starbase80
          namespace: starbase80
          port: http
