rendered/envs/alpha/authelia/ingressroute-authelia-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: authelia-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`authelia.lan.zebradil.dev`) || Host(`authelia.junior.lan.zebradil.dev`)
      services:
        - name: authelia
          port: http
