rendered/envs/alpha/authelia/ingressroute-authelia-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: authelia-vpn
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`authelia.ts.zebradil.dev`) || Host(`authelia.junior.ts.zebradil.dev`)
      services:
        - name: authelia
          port: http
