rendered/envs/alpha/authelia/ingressroute-authelia.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: authelia
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`authelia.zebradil.dev`) || Host(`authelia.junior.zebradil.dev`)
      middlewares:
        - name: chain-authelia
          namespace: authelia
      services:
        - name: authelia
          port: http
